--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" class="light">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +15,11 @@
         <div id="profile">
             <img src="./assets/assets/avatar_Gardenal.png " alt="">
             <p>@Gardenal_para_Loucos</p>
+        </div>
+        <div id="switch" onclick="toggleMode()">
+            <button>
+            </button>
+            <span></span>
         </div>
         <ul>
             <li>
@@ -32,7 +37,31 @@
                 </a>
             </li>
         </ul>
-    </div>
+        <div id="social_links">
+            <a href="https://web.whatsapp.com/" target="_blank">
+                <ion-icon name="logo-github"></ion-icon>
+            </a>
 
+            <a href="" target="_blank">
+                <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+
+            <a href="" target="_blank">
+                <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+
+            <a href="" target="_blank">
+                <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+
+        </div>
+        <footer>Feito com amor por Miguel Silva 
+
+        </footer>
+
+    </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
